[package]
name = "catprinter"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
btleplug = { version = "0.10" }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
rusttype = "0.9"
once_cell = "1.20"
image = "0.24"
imageproc = "0.23.0"
